# rmBifrost

./: CMakeLists.txt  README.md  config.json  cover.psd
src/: BookConfig.cpp  BookConfig.h  CMakeLists.txt  bifrost_impl.cpp  entrypoint.cpp
src/compositor/: compositor.cpp
src/gui/: ChooseFile_screen.cpp  ChooseFile_screen.h  ComicArchive.cpp  ComicArchive.h  ImageIo.cpp  ImageIo.h  boot_screen.cpp  brokenfile.c  lv_conf.h  lvgl_renderer.cpp
src/libs/cJSON/: CMakeLists.txt
src/libs/miniz/: CMakeLists.txt
src/libs/unrar-free/: CMakeLists.txt
